--- a/website/package.json
+++ b/website/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.1.1",
     "react-scripts": "^1.1.0",
-    "style-loader": "^0.19.0"
+    "style-loader": "^0.19.0",
+    "ws": "^4.0.0"
   }
 }
